# ksync

./: Cargo.toml  README.md  ROADMAP.md  out.txt  shell.nix
client/: Cargo.toml
client/src/: config.rs  main.rs
common/: Cargo.toml
common/src/: fmt.rs  lib.rs  proto.rs  util.rs
example/: admin.key  client.key  client.key.pub  client.toml  config.toml  server.key  server.toml  test.txt  test_batch.ksb
example/keys/: admin.key  client.key  client.key.pub  server.key
server/: Cargo.toml
server/src/: config.rs  files.rs  main.rs  server.rs  util.rs
src/: admin.rs  batch.rs  cli.rs  client.rs  config.rs  files.rs  main.rs  proto.rs  server.rs  sync.rs
src/files/: crypto.rs  mod.rs  node.rs
src/server/: methods.rs  mod.rs
src/server/methods/: admin.rs  auth.rs  fs.rs  mod.rs
src/util/: fmt.rs  mod.rs
