[package]
name = "ksync"
version = "0.1.0"
authors = ["Jacob Sinclair <jcbsnclr@outlook.com>"]
license = "GPLv3.0-or-later"
license-file = "LICENSE"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.17", features = ["derive"] }
digest = "0.10.7"
env_logger = "0.10.0"
bincode = "1.3.3"
log = "0.4.19"
serde = { version = "1.0.173", features = ["derive"] }
sha2 = "0.10.7"
sled = "0.34.7"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.7.6"
chrono = { version = "0.4.26", features = ["serde"] }
notify = "6.0.1"
glob = "0.3.1"
