[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.17", features = ["derive"] }
serde = { version = "1.0.173", features = ["derive"] }
thiserror = "1.0.43"
bincode = "1.3.3"
toml = "0.7.6"
tokio = { version = "1.29.1", features = ["full"] }

[dependencies.common]
path = "../common"
